--- a/231027/231027.csproj
+++ b/231027/231027.csproj
@@ -123,6 +123,12 @@
     <Compile Include="Views\FrmCidades.Designer.cs">
       <DependentUpon>FrmCidades.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\FrmCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FrmCliente.Designer.cs">
+      <DependentUpon>FrmCliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\FrmMarca.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FrmCidades.resx">
       <DependentUpon>FrmCidades.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\FrmCliente.resx">
+      <DependentUpon>FrmCliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FrmMarca.resx">
       <DependentUpon>FrmMarca.cs</DependentUpon>
